Fix of card gap on Plans

--- a/src/components/Plans/Plans.module.scss
+++ b/src/components/Plans/Plans.module.scss
@@ -249,11 +249,12 @@
         .plan-cards {
           display: flex;
           grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-          gap: 0;
+          gap: 28px;
 
           @media only screen and (max-width: 768px) {
             display: flex;
             overflow: auto;
+            gap: 0;
           }
 
           .plan-card {
